syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service ApplicantProfile {
   rpc ReadApplicantProfile(IdRequestAppProfile) returns (ApplicantProfilePayLoad);  
   rpc CreateApplicantProfile(ApplicantProfilePayLoad) returns (google.protobuf.Empty);
   rpc UpdateApplicantProfile(ApplicantProfilePayLoad) returns (google.protobuf.Empty);
   rpc DeleteApplicantProfile(ApplicantProfilePayLoad) returns (google.protobuf.Empty);
  }



message IdRequestAppProfile {
    string Id = 1;
}

message ApplicantProfilePayLoad {
         string Id = 1;   // 1 is position
         string Login = 2;
         double CurrentSalary = 3;
         double CurrentRate = 4;
         string Currency = 5;
         string Country = 6;
         string Province = 7;
         string Street = 8;
         string City = 9;
         string PostalCode = 10;

}